# UIP-examples

./: README.md
Token/FT/EVM/: .gitignore  LICENCE  README.md  hardhat.config.ts  package.json
Token/FT/EVM/.openzeppelin/: unknown-33133.json  unknown-5003.json  unknown-80002.json
Token/FT/EVM/addresses/polygon_amoy/: EntangleToken.json  ExampleToken.json
Token/FT/EVM/addresses/teib/: EntangleToken.json  ExampleToken.json
Token/FT/EVM/contracts/: EntangleToken.sol  ExampleToken.sol  WNative.sol
Token/FT/EVM/scripts/: deployEntangleToken.ts  deployExampleToken.ts  upgradeExampleToken.ts  utils.ts
Token/FT/EVM/tasks/: estimateFee.ts  getBalance.ts  getMsgData.ts  getMsgExecutionStatus.ts  getMsgStatusByHash.ts  getProposal.ts  getReward.ts  msgStatus.ts  sendTokens.ts  setOrigin.ts
Token/FT/EVM/test/: EntangleToken.test.ts  ExampleToken.test.ts
Token/FT/Solana/: .gitignore  Anchor.toml  Cargo.toml  README.md  package.json
Token/FT/Solana/extensions/example-token-extenion/: Cargo.toml
Token/FT/Solana/extensions/example-token-extenion/src/: lib.rs
Token/FT/Solana/helpers/: endpoint.ts  exampleToken.ts  utils.ts
Token/FT/Solana/programs/chunk-loader/: Cargo.toml
Token/FT/Solana/programs/chunk-loader/src/: lib.rs
Token/FT/Solana/programs/example-token/: Cargo.toml
Token/FT/Solana/programs/example-token/src/: addresses.rs  error.rs  lib.rs  state.rs  utils.rs
Token/FT/Solana/programs/example-token/src/instructions/: bridge.rs  execute.rs  initialize.rs  mint.rs  mod.rs  register_extension.rs  update_admin.rs
Token/FT/Solana/scripts/: bridge.ts  initialize.ts  mint.ts  updateAdmin.ts
Token/FT/Solana/tests/: exampleToken.test.ts
Token/FT/Solana/tests/accounts/: uip-config.json  uip_config.json
other/Messenger/EVM/: .gitignore  README.md  hardhat.config.ts  package-lock.json  package.json
other/Messenger/EVM/.openzeppelin/: sepolia.json  unknown-33133.json  unknown-5003.json  unknown-80002.json
other/Messenger/EVM/addresses/avalanche_fuji/: MessengerProtocol.json
other/Messenger/EVM/addresses/base_sepolia/: MessengerProtocol.json
other/Messenger/EVM/addresses/ethereum_sepolia/: MessengerProtocol.json
other/Messenger/EVM/addresses/hardhat/: MessengerProtocol.json
other/Messenger/EVM/addresses/localhost/: MessengerProtocol.json
other/Messenger/EVM/addresses/mantle_sepolia/: MessengerProtocol.json
other/Messenger/EVM/addresses/polygon_amoy/: MessengerProtocol.json
other/Messenger/EVM/addresses/sonic_blaze/: MessengerProtocol.json
other/Messenger/EVM/addresses/teib/: MessengerProtocol.json
other/Messenger/EVM/contracts/: AgentParamsEncoderMock.sol  EndPoint.sol  MessageData.sol  MessageReceiver.sol  MessengerProtocol.sol
other/Messenger/EVM/contracts/interfaces/: IProposer.sol
other/Messenger/EVM/contracts/lib/: AgentParamsLib.sol  MessageLib.sol  SignatureLib.sol
other/Messenger/EVM/scripts/: changeEndpoints.ts  deployEndpoint.ts  deployMessenger.ts  messenger.ts  proposalParser.ts  run.ts  utils.ts
other/Messenger/EVM/tasks/: balance.ts  estimateFee.ts  getBlock.ts  getChainIds.ts  getLastMessage.ts  getMessageInfo.ts  getMsg.ts  getMsgExecution.ts  getMsgHash.ts  getMsgInfo.ts  getMsgStatusByHash.ts  getProposal.ts  getReward.ts  getTxData.ts  msgStatus.ts  readTxEvent.ts  sendMessage.ts
other/Messenger/EVM/test/: messenger.test.ts  testUtils.ts
other/Messenger/EVM/utils/: constants.ts  utils.ts
other/Messenger/Solana/: Anchor.toml  Cargo.toml  README.md  package.json
other/Messenger/Solana/extensions/messenger-extension/: Cargo.toml
other/Messenger/Solana/extensions/messenger-extension/src/: lib.rs
other/Messenger/Solana/helpers/: chunkLoader.ts  endpoint.ts  messenger.ts  utils.ts  utsMock.ts
other/Messenger/Solana/keys/: executor.json
other/Messenger/Solana/programs/chunk-loader/: Cargo.toml
other/Messenger/Solana/programs/chunk-loader/src/: lib.rs
other/Messenger/Solana/programs/messenger/: Cargo.toml  README.md
other/Messenger/Solana/programs/messenger/src/: addresses.rs  error.rs  lib.rs  state.rs
other/Messenger/Solana/programs/messenger/src/instructions/: execute.rs  initialize.rs  mod.rs  noop.rs  register_extension.rs  send_message.rs  set_allowed_senders.rs  update_admin.rs
other/Messenger/Solana/scripts/: getMessagesBySender.ts  initialize.ts  sendBigMessage.ts  sendMessage.ts  updateAdmin.ts
other/Messenger/Solana/tests/: messenger.test.ts
other/Messenger/Solana/tests/accounts/: uip-config.json  uip_config.json
other/Messenger/Solana/ts-sdk/: package.json
other/Messenger/Solana/ts-sdk/src/: index.ts  utils.ts
other/Messenger/Solana/ts-sdk/src/idl/: messenger.json  messenger.ts
