[workspace]
members = [
    "programs/*",
    "extensions/*",
]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

[patch.crates-io]
curve25519-dalek = { git = "https://github.com/lincot/curve25519-dalek", branch = "unpin-zeroize" }
