[package]
name = "example-token-extension"
version = "0.1.0"
edition = "2021"

[features]
default = []
devnet = ["example-token/devnet", "uip-endpoint-solana/devnet"]

[lib]
crate-type = ["cdylib"]

[dependencies]
alloy-sol-types = "0.7"
borsh = "0.10.4"
example-token = { path = "../../programs/example-token", features = ["no-entrypoint"] }
solana-program = "2.1"

[dependencies.uip-endpoint-solana]
git = "ssh://git@gitlab.ent-dx.com/entangle/ccm-2.0/photon-messaging-solana.git"
branch = "develop"
features = ["cpi"]
