[package]
name = "example-token"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "example_token"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
devnet = ["uip-endpoint-solana/devnet"]

[dependencies]
alloy-sol-types = "0.7"
anchor-lang = "0.30.1"
hex = "0.4"
hex-literal = "0.4"
ruint = "1.12"
solana-invoke = { git = "https://github.com/lincot/solana-invoke", branch = "solana-program-v1-only" }
spl-associated-token-account = { version = "1", features = ["no-entrypoint"] }
spl-token = { version = "4.0", features = ["no-entrypoint"] }

[dependencies.uip-endpoint-solana]
git = "ssh://git@gitlab.ent-dx.com/entangle/ccm-2.0/photon-messaging-solana.git"
branch = "develop"
features = ["cpi", "devnet"]
