[package]
name = "example-token"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "example_token"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
alloy-sol-types = "0.7"
anchor-lang = "0.31.0"
hex = "0.4"
hex-literal = "0.4"
ruint = "1.12"
solana-invoke = "0.2"
spl-associated-token-account = { version = "6", features = ["no-entrypoint"] }
spl-token = { version = "7", features = ["no-entrypoint"] }

[dependencies.uip-solana-sdk]
git = "ssh://git@gitlab.ent-dx.com/entangle/ccm-2.0/photon-messaging-solana.git"
branch = "develop"
features = ["anchor-lang"]
