[package]
name = "chunk-loader"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "chunk_loader"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
devnet = []

[dependencies]
anchor-lang = "0.30.1"
solana-invoke = "0.2.0"
