[package]
name = "messenger"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "messenger"

[features]
default = ["no-idl"]
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
mainnet = []

[dependencies]
alloy-sol-types = "0.7"
anchor-lang = "0.31.0"
hex-literal = "0.4"
solana-security-txt = "1.1.1"
uip-solana-sdk = { version = "0.6", features = ["anchor-lang"] }
